# cmake-project-skeleton

./: CMakeLists.txt  Readme.md
source/: CMakeLists.txt
source/project1/: CMakeLists.txt
source/project2/: CMakeLists.txt
source/project3-CUDA/: CMakeLists.txt  cuda-helpers.hpp  project3-CUDA.cu
tests/: CMakeLists.txt
tests/test-project1/: CMakeLists.txt  test-project1.cpp
tests/test-project2/: CMakeLists.txt  test-project2.cpp
tests/test-project3-CUDA/: CMakeLists.txt  test-project3-CUDA.cu
